parser/minipar_parser.go
// Code generated from Minipar.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Minipar
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MiniparParser struct {
	*antlr.BaseParser
}

var MiniparParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func miniparParserInit() {
	staticData := &MiniparParserStaticData
	staticData.LiteralNames = []string{
		"", "'{'", "'}'", "'('", "')'", "'.'", "','", "'='", "';'", "'['", "']'",
		"':'", "'class'", "'extends'", "'new'", "'func'", "'if'", "'while'",
		"'do'", "'for'", "'in'", "'seq'", "'par'", "'print'", "'input'", "'return'",
		"'break'", "'continue'", "'pass'", "'s_channel'", "'c_channel'", "'send'",
		"'receive'", "'number'", "'string'", "'bool'", "'void'", "'list'", "'dict'",
		"'true'", "'false'", "'or'", "'and'", "'!'", "'=='", "'!='", "'<'",
		"'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "CLASS", "EXTENDS",
		"NEW", "FUNC", "IF", "WHILE", "DO", "FOR", "IN", "SEQ", "PAR", "PRINT",
		"INPUT", "RETURN", "BREAK", "CONTINUE", "PASS", "S_CHANNEL", "C_CHANNEL",
		"SEND", "RECEIVE", "NUMBER_TYPE", "STRING_TYPE", "BOOL_TYPE", "VOID_TYPE",
		"LIST_TYPE", "DICT_TYPE", "TRUE", "FALSE", "OR", "AND", "NOT", "EQ",
		"NEQ", "LT", "GT", "LTE", "GTE", "PLUS", "MINUS", "MUL", "DIV", "MOD",
		"ID", "NUMERO", "STRING", "WS", "INLINE_COMMENT", "BLOCK_COMMENT",
	}
	staticData.RuleNames = []string{
		"program", "declaration", "class_decl", "class_member", "method_decl",
		"method_call", "obj_creation", "func_decl", "params", "param", "func_call",
		"args", "var_decl", "assignment", "block", "stmt", "compound_stmt",
		"if_stmt", "while_stmt", "do_stmt", "for_stmt", "seq_stmt", "par_stmt",
		"print_call", "input_call", "simple_stmt", "expr_stmt", "channel_stmt",
		"s_channel_stmt", "c_channel_stmt", "send_stmt", "receive_stmt", "expr",
		"or_expr", "and_expr", "comparison_expr", "additive_expr", "multiplicative_expr",
		"unary_expr", "postfix_expr", "primary_expr", "list_literal", "dict_literal",
		"key_value_pair", "type", "id",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MiniparParserInit initializes any static state used to implement MiniparParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMiniparParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MiniparParserInit() {
	staticData := &MiniparParserStaticData
	staticData.once.Do(miniparParserInit)
}

// NewMiniparParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMiniparParser(input antlr.TokenStream) *MiniparParser {
	MiniparParserInit()
	this := new(MiniparParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MiniparParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Minipar.g4"

	return this
}

// MiniparParser tokens.
const (
	MiniparParserEOF            = antlr.TokenEOF
	MiniparParserT__0           = 1
	MiniparParserT__1           = 2
	MiniparParserT__2           = 3
	MiniparParserT__3           = 4
	MiniparParserT__4           = 5
	MiniparParserT__5           = 6
	MiniparParserT__6           = 7
	MiniparParserT__7           = 8
	MiniparParserT__8           = 9
	MiniparParserT__9           = 10
	MiniparParserT__10          = 11
	MiniparParserCLASS          = 12
	MiniparParserEXTENDS        = 13
	MiniparParserNEW            = 14
	MiniparParserFUNC           = 15
	MiniparParserIF             = 16
	MiniparParserWHILE          = 17
	MiniparParserDO             = 18
	MiniparParserFOR            = 19
	MiniparParserIN             = 20
	MiniparParserSEQ            = 21
	MiniparParserPAR            = 22
	MiniparParserPRINT          = 23
	MiniparParserINPUT          = 24
	MiniparParserRETURN         = 25
	MiniparParserBREAK          = 26
	MiniparParserCONTINUE       = 27
	MiniparParserPASS           = 28
	MiniparParserS_CHANNEL      = 29
	MiniparParserC_CHANNEL      = 30
	MiniparParserSEND           = 31
	MiniparParserRECEIVE        = 32
	MiniparParserNUMBER_TYPE    = 33
	MiniparParserSTRING_TYPE    = 34
	MiniparParserBOOL_TYPE      = 35
	MiniparParserVOID_TYPE      = 36
	MiniparParserLIST_TYPE      = 37
	MiniparParserDICT_TYPE      = 38
	MiniparParserTRUE           = 39
	MiniparParserFALSE          = 40
	MiniparParserOR             = 41
	MiniparParserAND            = 42
	MiniparParserNOT            = 43
	MiniparParserEQ             = 44
	MiniparParserNEQ            = 45
	MiniparParserLT             = 46
	MiniparParserGT             = 47
	MiniparParserLTE            = 48
	MiniparParserGTE            = 49
	MiniparParserPLUS           = 50
	MiniparParserMINUS          = 51
	MiniparParserMUL            = 52
	MiniparParserDIV            = 53
	MiniparParserMOD            = 54
	MiniparParserID             = 55
	MiniparParserNUMERO         = 56
	MiniparParserSTRING         = 57
	MiniparParserWS             = 58
	MiniparParserINLINE_COMMENT = 59
	MiniparParserBLOCK_COMMENT  = 60
)

// MiniparParser rules.
const (
	MiniparParserRULE_program             = 0
	MiniparParserRULE_declaration         = 1
	MiniparParserRULE_class_decl          = 2
	MiniparParserRULE_class_member        = 3
	MiniparParserRULE_method_decl         = 4
	MiniparParserRULE_method_call         = 5
	MiniparParserRULE_obj_creation        = 6
	MiniparParserRULE_func_decl           = 7
	MiniparParserRULE_params              = 8
	MiniparParserRULE_param               = 9
	MiniparParserRULE_func_call           = 10
	MiniparParserRULE_args                = 11
	MiniparParserRULE_var_decl            = 12
	MiniparParserRULE_assignment          = 13
	MiniparParserRULE_block               = 14
	MiniparParserRULE_stmt                = 15
	MiniparParserRULE_compound_stmt       = 16
	MiniparParserRULE_if_stmt             = 17
	MiniparParserRULE_while_stmt          = 18
	MiniparParserRULE_do_stmt             = 19
	MiniparParserRULE_for_stmt            = 20
	MiniparParserRULE_seq_stmt            = 21
	MiniparParserRULE_par_stmt            = 22
	MiniparParserRULE_print_call          = 23
	MiniparParserRULE_input_call          = 24
	MiniparParserRULE_simple_stmt         = 25
	MiniparParserRULE_expr_stmt           = 26
	MiniparParserRULE_channel_stmt        = 27
	MiniparParserRULE_s_channel_stmt      = 28
	MiniparParserRULE_c_channel_stmt      = 29
	MiniparParserRULE_send_stmt           = 30
	MiniparParserRULE_receive_stmt        = 31
	MiniparParserRULE_expr                = 32
	MiniparParserRULE_or_expr             = 33
	MiniparParserRULE_and_expr            = 34
	MiniparParserRULE_comparison_expr     = 35
	MiniparParserRULE_additive_expr       = 36
	MiniparParserRULE_multiplicative_expr = 37
	MiniparParserRULE_unary_expr          = 38
	MiniparParserRULE_postfix_expr        = 39
	MiniparParserRULE_primary_expr        = 40
	MiniparParserRULE_list_literal        = 41
	MiniparParserRULE_dict_literal        = 42
	MiniparParserRULE_key_value_pair      = 43
	MiniparParserRULE_type                = 44
	MiniparParserRULE_id                  = 45
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDeclaration() []IDeclarationContext
	Declaration(i int) IDeclarationContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniparParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(MiniparParserEOF, 0)
}

func (s *ProgramContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *MiniparParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MiniparParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&36029339795492864) != 0) {
		{
			p.SetState(92)
			p.Declaration()
		}

		p.SetState(95)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(97)
		p.Match(MiniparParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Class_decl() IClass_declContext
	Func_decl() IFunc_declContext
	Var_decl() IVar_declContext
	Channel_stmt() IChannel_stmtContext

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_declaration
	return p
}

func InitEmptyDeclarationContext(p *DeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_declaration
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniparParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) Class_decl() IClass_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClass_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClass_declContext)
}

func (s *DeclarationContext) Func_decl() IFunc_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunc_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunc_declContext)
}

func (s *DeclarationContext) Var_decl() IVar_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVar_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVar_declContext)
}

func (s *DeclarationContext) Channel_stmt() IChannel_stmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChannel_stmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChannel_stmtContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *MiniparParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MiniparParserRULE_declaration)
	p.SetState(103)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MiniparParserCLASS:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(99)
			p.Class_decl()
		}

	case MiniparParserFUNC:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(100)
			p.Func_decl()
		}

	case MiniparParserNUMBER_TYPE, MiniparParserSTRING_TYPE, MiniparParserBOOL_TYPE, MiniparParserVOID_TYPE, MiniparParserLIST_TYPE, MiniparParserDICT_TYPE, MiniparParserID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(101)
			p.Var_decl()
		}

	case MiniparParserS_CHANNEL, MiniparParserC_CHANNEL:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(102)
			p.Channel_stmt()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClass_declContext is an interface to support dynamic dispatch.
type IClass_declContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CLASS() antlr.TerminalNode
	AllId() []IIdContext
	Id(i int) IIdContext
	EXTENDS() antlr.TerminalNode
	AllClass_member() []IClass_memberContext
	Class_member(i int) IClass_memberContext

	// IsClass_declContext differentiates from other interfaces.
	IsClass_declContext()
}

type Class_declContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClass_declContext() *Class_declContext {
	var p = new(Class_declContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_class_decl
	return p
}

func InitEmptyClass_declContext(p *Class_declContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_class_decl
}

func (*Class_declContext) IsClass_declContext() {}

func NewClass_declContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Class_declContext {
	var p = new(Class_declContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniparParserRULE_class_decl

	return p
}

func (s *Class_declContext) GetParser() antlr.Parser { return s.parser }

func (s *Class_declContext) CLASS() antlr.TerminalNode {
	return s.GetToken(MiniparParserCLASS, 0)
}

func (s *Class_declContext) AllId() []IIdContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IIdContext); ok {
			len++
		}
	}

	tst := make([]IIdContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IIdContext); ok {
			tst[i] = t.(IIdContext)
			i++
		}
	}

	return tst
}

func (s *Class_declContext) Id(i int) IIdContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdContext)
}

func (s *Class_declContext) EXTENDS() antlr.TerminalNode {
	return s.GetToken(MiniparParserEXTENDS, 0)
}

func (s *Class_declContext) AllClass_member() []IClass_memberContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IClass_memberContext); ok {
			len++
		}
	}

	tst := make([]IClass_memberContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IClass_memberContext); ok {
			tst[i] = t.(IClass_memberContext)
			i++
		}
	}

	return tst
}

func (s *Class_declContext) Class_member(i int) IClass_memberContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClass_memberContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClass_memberContext)
}

func (s *Class_declContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Class_declContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Class_declContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.EnterClass_decl(s)
	}
}

func (s *Class_declContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.ExitClass_decl(s)
	}
}

func (p *MiniparParser) Class_decl() (localctx IClass_declContext) {
	localctx = NewClass_declContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MiniparParserRULE_class_decl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		p.Match(MiniparParserCLASS)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(106)
		p.Id()
	}
	p.SetState(109)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == MiniparParserEXTENDS {
		{
			p.SetState(107)
			p.Match(MiniparParserEXTENDS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(108)
			p.Id()
		}

	}
	{
		p.SetState(111)
		p.Match(MiniparParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(113)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&36029338184843264) != 0) {
		{
			p.SetState(112)
			p.Class_member()
		}

		p.SetState(115)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(117)
		p.Match(MiniparParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClass_memberContext is an interface to support dynamic dispatch.
type IClass_memberContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Var_decl() IVar_declContext
	Method_decl() IMethod_declContext

	// IsClass_memberContext differentiates from other interfaces.
	IsClass_memberContext()
}

type Class_memberContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClass_memberContext() *Class_memberContext {
	var p = new(Class_memberContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_class_member
	return p
}

func InitEmptyClass_memberContext(p *Class_memberContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_class_member
}

func (*Class_memberContext) IsClass_memberContext() {}

func NewClass_memberContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Class_memberContext {
	var p = new(Class_memberContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MiniparParserRULE_class_member

	return p
}

func (s *Class_memberContext) GetParser() antlr.Parser { return s.parser }

func (s *Class_memberContext) Var_decl() IVar_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVar_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVar_declContext)
}

func (s *Class_memberContext) Method_decl() IMethod_declContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMethod_declContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMethod_declContext)
}

func (s *Class_memberContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Class_memberContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Class_memberContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.EnterClass_member(s)
	}
}

func (s *Class_memberContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(MiniparListener); ok {
		listenerT.ExitClass_member(s)
	}
}

func (p *MiniparParser) Class_member() (localctx IClass_memberContext) {
	localctx = NewClass_memberContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, MiniparParserRULE_class_member)
	p.SetState(121)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(119)
			p.Var_decl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(120)
			p.Method_decl()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMethod_declContext is an interface to support dynamic dispatch.
type IMethod_declContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() ITypeContext
	Id() IIdContext
	Block() IBlockContext
	Params() IParamsContext

	// IsMethod_declContext differentiates from other interfaces.
	IsMethod_declContext()
}

type Method_declContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMethod_declContext() *Method_declContext {
	var p = new(Method_declContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MiniparParserRULE_method_decl
	return p
}
